fixed store page overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   background-color: black;
-  overflow: hidden; /* Hide scrollbars */
 }
 
 img {
